# hasami

./: .gitignore  CMakeLists.txt  README.md
FreeImage/: CMakeLists.txt
FreeImage/Source/: module.inc
FreeImage/Source/OpenEXR/Imath/: ImathMatrix.h  ImathVec.h
FreeImage/Source/ZLib/: test
demo/: CMakeLists.txt
demo/res/: basic.glsl  miku.obj.mtl  skybox.glsl
demo/src/: demo.cpp  demo.hpp  globe.hpp  main.cpp
glad/include/glad/: glad.h
hasami/: CMakeLists.txt
hasami/private/: camera.cpp  filewatchservice.cpp  globe.cpp  material.cpp  mesh.cpp  renderer.cpp  scenegraph.cpp  shader.cpp  window.cpp
hasami/private/backends/gl/: glbuffer.cpp  glrenderer.cpp  glshader.cpp  gltexture.cpp  material.cpp  mesh.cpp  renderer.cpp  shader_error_page.cpp  shader_error_page.hpp
hasami/private/backends/glraw/: glbuffer.cpp  glrenderer.cpp  glshader.cpp  gltexture.cpp
hasami/private/backends/sdl/: sdlwindow.cpp
hasami/private/environment/: clouds.cpp
hasami/private/gl/: buffer.cpp  glbuffer.cpp  glrenderer.cpp  glshader.cpp  gltexture.cpp  renderer.cpp  sdlwindow.cpp  shader.cpp
hasami/private/renderer/: material.cpp  mesh.cpp  renderer.cpp
hasami/private/scene/: camera.cpp  scenegraph.cpp
hasami/private/util/: filewatchservice.cpp
hasami/public/: app.hpp  buffer.hpp  camera.hpp  filewatchservice.hpp  globe.hpp  material.hpp  mesh.hpp  optional.hpp  renderer.hpp  renderstate.hpp  scenegraph.hpp  shader.hpp  standardmaterial.hpp  util.hpp  variant.hpp  window.hpp
hasami/public/backends/gl/: constants.hpp  glbuffer.hpp  glrenderer.hpp  glshader.hpp  gltexture.hpp  material.hpp  mesh.hpp  renderer.hpp  renderstate.hpp
hasami/public/backends/glraw/: glbuffer.hpp  glrenderer.hpp  glshader.hpp  gltexture.hpp
hasami/public/backends/sdl/: sdlwindow.hpp
hasami/public/gl/: buffer.hpp  glbuffer.hpp  glrenderer.hpp  glshader.hpp  gltexture.hpp  renderer.hpp  sdlwindow.hpp  shader.hpp
hasami/public/renderer/: material.hpp  mesh.hpp  standardmaterial.hpp
hasami/public/scene/: scenegraph.hpp
hasami/public/util/: filewatchservice.hpp  optional.hpp  variant.hpp  variant.inl
hasami_test/: CMakeLists.txt  app_test_utils.hpp
hasami_test/gl/: renderer_test.cpp  window.cpp  window_test.cpp
hikari/: CMakeLists.txt
hikari/src/: hikari.cpp  hikari.hpp  main.cpp  trace.cu  trace.hpp
kumo/: CMakeLists.txt  imgui.ini
kumo/res/: clouds.glsl  imgui.glsl
kumo/src/: clouds.cpp  clouds.hpp  demo.cpp  demo.hpp  globe.cpp  globe.hpp  main.cpp
kumo/src/util/: cached_vector.hpp
kumo_test/: CMakeLists.txt
kumo_test/util/: cached_vector_test.cpp
libs/FreeImage/: CMakeLists.txt
libs/FreeImage/Source/FreeImage/: PluginPNG.cpp
libs/FreeImage/Source/LibRawLite/internal/: dcraw_common.cpp  libraw_x3f.cpp
libs/FreeImage/Source/OpenEXR/Imath/: ImathVec.cpp
libs/glad/src/: glad.c
